ctui-components/src/snapshots/ctui_components__block__tests__border_all_double.snap
---
source: ctui-components/src/block.rs
assertion_line: 385
expression: result
---
╔════════╗
║        ║
║        ║
║        ║
╚════════╝
