ctui-components/src/snapshots/ctui_components__block__tests__border_all_thick.snap
---
source: ctui-components/src/block.rs
assertion_line: 394
expression: result
---
┏━━━━━━━━┓
┃        ┃
┃        ┃
┃        ┃
┗━━━━━━━━┛
