ctui-components/src/snapshots/ctui_components__block__tests__border_left_right.snap
---
source: ctui-components/src/block.rs
assertion_line: 436
expression: result
---
│        │
│        │
│        │
│        │
│        │
