ctui-components/src/snapshots/ctui_components__block__tests__border_positioned_titles.snap
---
source: ctui-components/src/block.rs
expression: result
---
┌ T ─────┐
│        │
│        │
│        │
└ B ─────┘
