ctui-components/src/snapshots/ctui_components__block__tests__border_right_only.snap
---
source: ctui-components/src/block.rs
assertion_line: 408
expression: result
---
         │
         │
         │
         │
         │
