ctui-components/src/snapshots/ctui_components__block__tests__border_title_on_left.snap
---
source: ctui-components/src/block.rs
expression: result
---
┌────────┐
L        │
e        │
f        │
t        │
│        │
│        │
└────────┘
