ctui-components/src/snapshots/ctui_components__block__tests__border_title_on_right.snap
---
source: ctui-components/src/block.rs
expression: result
---
┌────────┐
│        R
│        i
│        g
│        h
│        t
│        │
└────────┘
