ctui-components/src/snapshots/ctui_components__block__tests__border_titles_all_sides.snap
---
source: ctui-components/src/block.rs
expression: result
---
┌ Top ────────┐
L             R
│             │
│             │
│             │
│             │
│             │
│             │
│             │
└ Bottom ─────┘
